; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_hugetlb.c_alloc_huge_page_vma.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_hugetlb.c_alloc_huge_page_vma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.hstate = type { i32 }
%struct.vm_area_struct = type { i32 }
%struct.mempolicy = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.page* @alloc_huge_page_vma(%struct.hstate* %0, %struct.vm_area_struct* %1, i64 %2) #0 {
  %4 = alloca %struct.hstate*, align 8
  %5 = alloca %struct.vm_area_struct*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.mempolicy*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.page*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.hstate* %0, %struct.hstate** %4, align 8
  store %struct.vm_area_struct* %1, %struct.vm_area_struct** %5, align 8
  store i64 %2, i64* %6, align 8
  %12 = load %struct.hstate*, %struct.hstate** %4, align 8
  %13 = call i32 @htlb_alloc_mask(%struct.hstate* %12)
  store i32 %13, i32* %10, align 4
  %14 = load %struct.vm_area_struct*, %struct.vm_area_struct** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load i32, i32* %10, align 4
  %17 = call i32 @huge_node(%struct.vm_area_struct* %14, i64 %15, i32 %16, %struct.mempolicy** %7, i32** %8)
  store i32 %17, i32* %11, align 4
  %18 = load %struct.hstate*, %struct.hstate** %4, align 8
  %19 = load i32, i32* %11, align 4
  %20 = load i32*, i32** %8, align 8
  %21 = call %struct.page* @alloc_huge_page_nodemask(%struct.hstate* %18, i32 %19, i32* %20)
  store %struct.page* %21, %struct.page** %9, align 8
  %22 = load %struct.mempolicy*, %struct.mempolicy** %7, align 8
  %23 = call i32 @mpol_cond_put(%struct.mempolicy* %22)
  %24 = load %struct.page*, %struct.page** %9, align 8
  ret %struct.page* %24
}

declare dso_local i32 @htlb_alloc_mask(%struct.hstate*) #1

declare dso_local i32 @huge_node(%struct.vm_area_struct*, i64, i32, %struct.mempolicy**, i32**) #1

declare dso_local %struct.page* @alloc_huge_page_nodemask(%struct.hstate*, i32, i32*) #1

declare dso_local i32 @mpol_cond_put(%struct.mempolicy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
